--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,21 +1,44 @@
-name: Tests
+name: Autograding Tests
 
-on: [push, pull_request]
+on:
+  - push
+  - workflow_dispatch
+  - repository_dispatch
+
+permissions:
+  checks: write
+  actions: read
+  contents: read
 
 jobs:
-  test:
+  run-autograding-tests:
     runs-on: ubuntu-latest
-
+    if: github.actor != 'github-classroom[bot]'
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.8'
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: Run tests
-      run: |
-        pytest --maxfail=1 --disable-warnings -v
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.8'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Run tests
+        run: |
+          pytest --maxfail=1 --disable-warnings -v
+
+      - name: Autograding Reporter
+        uses: classroom-resources/autograding-grading-reporter@v1
+        with:
+          # Environment variables to capture test results
+          MAX-DRAWDOWN-TESTS: ${{ steps.run-tests.outputs.max_drawdown }}
+          EIGENPORTFOLIO-TESTS: ${{ steps.run-tests.outputs.eigenportfolio }}
+          MONTE-CARLO-OPTION-PRICING-TESTS: ${{ steps.run-tests.outputs.monte_carlo_option_pricing }}
+          CALCULATE-VAR-TESTS: ${{ steps.run-tests.outputs.calculate_var }}
+          TOP-PRINCIPAL-COMPONENTS-TESTS: ${{ steps.run-tests.outputs.top_principal_components }}
+          OPTIMIZE-VAR-TESTS: ${{ steps.run-tests.outputs.optimize_var }}
